--- a/style.css
+++ b/style.css
@@ -7293,7 +7293,7 @@ max-width: 380px;
 
 .catapult-zero-robe {
   width: 100%;
-background: linear-gradient(rgb(64, 50, 148), rgb(23, 43, 77)) 0% 0% / auto repeat scroll padding-box border-box rgb(64, 50, 148);
+background: linear-gradient(147deg, rgb(64, 50, 148), rgb(23, 43, 77)) 0% 0% / auto repeat scroll padding-box border-box rgb(64, 50, 148);
     background-blend-mode: normal;
     padding-top: 15px;
 
