--- a/style.css
+++ b/style.css
@@ -4382,13 +4382,13 @@ padding-bottom: 15px !important;
 
 .engine93 {
   background: transparent;
-  width: 100% !important;
+  width: 600px !important;
   margin-right: auto;
   margin-left: auto;
-  padding-top: 15px !important;
-  padding-bottom: 15px !important;
-  margin-bottom: -90px;
-  margin-top: 20px;
+  padding-top: 0px !important;
+padding-bottom: 15px !important;
+    margin-bottom: -27px;
+ margin-top: -34px;
   border-radius: 10px;
   padding-left: 10px;
   padding-right: 10px;
@@ -4406,13 +4406,13 @@ padding-bottom: 15px !important;
   
 .engine93 {
   background: transparent;
-  width: 100% !important;
+  width: 600px !important;
   margin-right: auto;
   margin-left: auto;
-  padding-top: 15px !important;
-  padding-bottom: 15px !important;
-  margin-bottom: -5px;
-  margin-top: 20px;
+  padding-top: 0px !important;
+padding-bottom: 15px !important;
+    margin-bottom: -27px;
+ margin-top: -34px;
   border-radius: 10px;
   padding-left: 10px;
   padding-right: 10px;
@@ -5843,8 +5843,8 @@ margin-top: 37px;
   width: 93% !important;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 70px;
-  margin-bottom: 10px;
+  margin-top: 30px;
+  margin-bottom: 22px;
 }  
 }
 
