🦄🌯 Checkpoint ./index.html:33983566/186 ./style.css:33983566/14 ./.glitch-assets:33983566/526

--- a/style.css
+++ b/style.css
@@ -5648,7 +5648,7 @@ input[type="text"]:focus {
   font-size: 13px !important;
   cursor: pointer !important;
   font-family: "genie13" !important;
-  color: #ec775d !important;
+  color: #7cffa4 !important;
   margin-top: 4px;
   margin-left: -7px;
       padding-top: 34px;
